--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-astroid==1.6.1
-beautifulsoup4==4.6.0
-bs4==0.0.1
-certifi==2018.4.16
-chardet==3.0.4
-colorama==0.3.9
-future==0.16.0
-idna==2.6
-isort==4.3.4
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-ply==3.11
-pylint==1.8.2
-pytelegrambotapi==3.5.2
-python-telegram-bot==10.0.2
-requests==2.18.4
+asn1crypto==0.24.0
+certifi==2018.10.15
+cffi==1.11.5
+coloredlogs==10.0
+cryptography==2.4.1
+future==0.17.1
+humanfriendly==4.17
+idna==2.7
+pycparser==2.19
+python-telegram-bot==11.1.0
 six==1.11.0
-urllib3==1.22
-virtualenv==15.2.0
-wrapt==1.10.11
