--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+APScheduler==3.6.3
 asn1crypto==0.24.0
+cachetools==4.2.2
 certifi==2018.10.15
+cffi==1.15.0
 coloredlogs==10.0
+cryptography==36.0.1
 future==0.17.1
 humanfriendly==4.17
 idna==2.7
 pycparser==2.19
+python-telegram-bot==13.11
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 six==1.11.0
-cryptography>=3.3.2
+tornado==6.1
+tzdata==2021.5
+tzlocal==4.1
